--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@types/leaflet": "^1.9.9",
     "leaflet": "^1.9.4",
-
+    "ptfst-db": "^1.2.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
